--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ApiOne
-@namespace ApiOne.Pages
+@using ApiTwo
+@namespace ApiTwo.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
