--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ApiTwo
-@namespace ApiTwo.Pages
+@using Client
+@namespace Client.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
