--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Client
-@namespace Client.Pages
+@using IdentityExample
+@namespace IdentityExample.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
