--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using IdentityExample
-@namespace IdentityExample.Pages
+@using IdentityServer
+@namespace IdentityServer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
