--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using IdentityServer
-@namespace IdentityServer.Pages
+@using MvcClient
+@namespace MvcClient.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
