--- a/Views/Home/Secret.cshtml
+++ b/Views/Home/Secret.cshtml
@@ -1,1 +1,31 @@
-﻿<h1>Secret page</h1>
+﻿
+<h1>Server Secret Page</h1>
+website_id        website_name
+112               Sesame Street
+223               PBS Kids
+312               TIME for Kids
+409               The play Page
+162               global Street
+224               PBSy Kids
+372               common for Kids
+479               The KIDZ
+132               main Street
+233               PBS Kids
+388               tool Kids
+439               each KIDZ Page
+116               same2 Street
+223               Publish
+372               kid minds
+469               brain gasne
+132               game roast
+263               take Kids
+372               services open
+489               nominal 
+162               kichen root
+293               school stuff
+392               common kids
+439               The kind internet
+102               Street out
+213               Kids coomon
+318               normal method
+401               open games
