--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using MvcClient
-@namespace MvcClient.Pages
+@using Server
+@namespace Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
